# WqSat_sr

./: .gitignore  AUTHORS  README.md  requirements.txt  setup.cfg  setup.py  wqsat_sr.py
wqsat_sr/: algorithms.py
