[metadata]
name = WqSat_sr
summary = Code to improve the spatial resolution of satellite images.
description-file = 
    README.md
author = Daniel Garcia-Diaz & Fernando Aguilar (IFCA / CSIC)
author-email = (garciad & aguilarf) @ifca.unican.es
version = 0.0.1
license = Apache License 2.0
home-page = https://github.com/garciadd/WqSat_sr.git
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10

[files]
packages =
    WqSat_sr